# elvis

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/executor/: execution.rs  mod.rs  options.rs
src/planner/: action.rs  mod.rs  mv.rs  plan.rs  rm.rs  touch.rs  traits.rs
src/printer/: mod.rs  options.rs  pretty.rs
tests/: cli_mv.rs  cli_rm.rs  cli_touch.rs
wix/: main.wxs
