[package]
name = "elvis"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that lets you preview file-system commands"
authors = ["iamtanong"]
repository = "https://github.com/iamtanong/elvis"
homepage = "https://github.com/iamtanong/elvis"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "DC90F888-D616-4FC2-900C-D553826D114A"
path-guid = "834C968F-31A5-4DB2-9777-12769F93DBD1"
license = false
eula = false

[dependencies]
clap = {version = "4.5.53", features = ["derive"]}
console = "0.16.2"
dialoguer = "0.12.0"
filetime = "0.2.26"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"


[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"